# quant_library

./: .env.example  .gitignore  Lorenz_Model_EnKF_example.ipynb  README.md  convert_and_extract.py  explanation.txt  pyproject.toml  pytest.ini  requirements.txt  technical_analysis_example.py
Python-for-Algorithmic-Trading-Cookbook-main/: README.md
Python-for-Finance-Cookbook-2E-main/: README.md
QuantLib-master/: QuantLib.props  QuantLib.sln  QuantLib.vcxproj  QuantLib.vcxproj.filters
Statistics_book-main/: README.md
cookbooks/: chapter_1.py  chapter_10.py  chapter_11.py  chapter_11_bonus.py  chapter_12.py  chapter_12_bonus.py  chapter_13.py  chapter_14.py  chapter_15.py  chapter_2.py  chapter_3.py  chapter_4.py  chapter_5.py  chapter_5_bonus.py  chapter_6.py  chapter_7.py  chapter_8.py  chapter_9.py
docs/: DEVELOPERS_GUIDE.md  USER_GUIDE.md
examples/: 01_getting_started.ipynb  01_portfolio_optimization.py  01_technical_analysis_and_plotting.py  02_broker_connection.py  02_capm_analysis.py  03_backtesting_a_strategy.py  03_black_scholes_pricing.py  04_value_at_risk.py  05_gbm_simulation.py  06_ornstein_uhlenbeck.py  07_present_value.py  08_zero_coupon_bond.py  09_coupon_bond.py  10_wiener_process.py  11_random_walk.py  12_vasicek_model.py  13_normal_returns.py  14_black_scholes_mc.py  15_var_monte_carlo.py
tests/: conftest.py  test_analysis.py  test_backtest.py  test_data_fetch.py  test_financial_models.py  test_fixed_income.py  test_portfolio.py  test_pricing.py  test_returns.py  test_risk.py  test_screening.py  test_stochastic_processes.py
(+551 files in other folders)
